    - ignore connection closed messages.
    - ignore auth failure messages whe ruser and rip are known.
  * ignore.d.server/postfix:
    - ignore messages about untrusted cert issuers that have any of &(), in
      their name.
    - ignore new message format for lacking subject CN in peer cert.
  * ignore.d.server/ssh:
    - ignore authentication failures with new PAM format.

 -- martin f. krafft <madduck@debian.org>  Thu, 17 Jul 2008 12:17:19 +0200

logcheck (1.2.67) unstable; urgency=low

  [ Gerfried Fuchs ]
  * fix ignore.d.server/smbd_audit which had an unescaped | resulting in
    everything ignored (closes: #489009). As this hasn't transitioned yet to
    testing no urgency bump.
  * Added README.source, more or less a plain copy from
    <http://www.logcheck.org/git.html>

 -- Gerfried Fuchs <rhonda@debian.at>  Fri, 04 Jul 2008 10:38:07 +0200

logcheck (1.2.66) unstable; urgency=low

  * Re-added mailx as dependency, which is a virtual package. Lintian
    misguided me. Sorry (closes: #488102).
  * Upgrade to Standards-Version 3.8.0, which requires no other changes.

 -- martin f. krafft <madduck@debian.org>  Thu, 26 Jun 2008 15:49:15 +0200

logcheck (1.2.65) unstable; urgency=low

  * violations.ignore.d/logcheck-postfix:
    - fixed filters for certificate messages that changed in postfix 2.5.
  * ignore.d.server/postfix:
    - ignore connection messages for anonymous TLS connections; thanks to
      Justin Larue (closes: #486440).
    - ignore hostname verification due to DNS name not found; thanks to
      Justin Larue (closes: #486440).
    - do not report connection failures due to timeouts.
  * ignore.d.server/maradns:
    - ignore messages related to resolvconf integration.
  * ignore.d.server/dovecot:
    - ignore aborted logins with 0 authentication attempts, e.g. due to
      nagios; thanks to René Hertell (closes: #487208).
  * ignore.d.server/cron-apt:
    - ignore harmless messages about state and space usage prediction; thanks