@@ -1,198 +1,3 @@
-logcheck-database binary: non-standard-file-perm etc/logcheck/cracking.d/logcheck 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/cracking.d/smartd 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/violations.d/kernel 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/violations.d/logcheck 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/violations.d/smartd 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/violations.d/su 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/violations.d/sudo 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/violations.ignore.d/logcheck-bind 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/violations.ignore.d/logcheck-bluez-utils 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/violations.ignore.d/logcheck-courier 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/violations.ignore.d/logcheck-cyrus 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/violations.ignore.d/logcheck-dcc 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/violations.ignore.d/logcheck-dovecot 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/violations.ignore.d/logcheck-hylafax 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/violations.ignore.d/logcheck-innd 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/violations.ignore.d/logcheck-kernel 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/violations.ignore.d/logcheck-login 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/violations.ignore.d/logcheck-mon 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/violations.ignore.d/logcheck-nagios 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/violations.ignore.d/logcheck-openvpn 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/violations.ignore.d/logcheck-passwd 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/violations.ignore.d/logcheck-pdns 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/violations.ignore.d/logcheck-postfix 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/violations.ignore.d/logcheck-procmail 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/violations.ignore.d/logcheck-proftpd 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/violations.ignore.d/logcheck-pureftp 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/violations.ignore.d/logcheck-samba 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/violations.ignore.d/logcheck-saslauthd 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/violations.ignore.d/logcheck-sasl2-bin 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/violations.ignore.d/logcheck-sendmail_tmp 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/violations.ignore.d/logcheck-smartd 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/violations.ignore.d/logcheck-spamd 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/violations.ignore.d/logcheck-squid 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/violations.ignore.d/logcheck-ssh 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/violations.ignore.d/logcheck-su 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/violations.ignore.d/logcheck-sudo 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/violations.ignore.d/logcheck-usb 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/violations.ignore.d/logcheck-winbind 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/violations.ignore.d/logcheck-cron-apt 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.workstation/automount 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.workstation/bind 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.workstation/bluetooth-alsa 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.workstation/bluez-utils 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.workstation/bonobo 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.workstation/francine 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.workstation/gconf 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.workstation/gdm 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.workstation/hald 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.workstation/hcid 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.workstation/ifplugd 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.workstation/ippl 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.workstation/kdm 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.workstation/kernel 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.workstation/logcheck 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.workstation/net-acct 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.workstation/nntpcache 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.workstation/polypaudio 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.workstation/postfix 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.workstation/ppp 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.workstation/proftpd 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.workstation/pump 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.workstation/sendfile 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.workstation/squid 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.workstation/udev 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.workstation/wdm 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.workstation/winbind 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.workstation/xdm 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.workstation/xlockmore 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/acpid 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/amandad 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/anacron 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/anon-proxy 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/apache 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/arpwatch 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/automount 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/bind 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/bluez-utils 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/courier 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/cpqarrayd 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/cpufreqd 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/cracklib 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/cron 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/cron-apt 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/cups-lpd 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/cvs-pserver 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/cvsd 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/cyrus 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/dcc 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/ddclient 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/dhclient 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/dhcp 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/dictd 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/dkfilter 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/dkim-filter 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/dnsmasq 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/dovecot 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/dspam 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/epmd 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/exim4 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/ftpd 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/gnu-imap4d 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/gps 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/grinch 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/horde3 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/hplip 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/hylafax 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/ikiwiki 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/imap 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/imapproxy 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/imp 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/imp4 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/innd 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/ipppd 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/isdnlog 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/isdnutils 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/jabberd 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/kernel 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/krb5-kdc 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/libpam-mount 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/logcheck 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/lpr 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/maradns 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/mldonkey-server 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/mon 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/nagios 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/netconsole 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/nfs 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/nntpcache 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/nscd 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/ntp 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/oidentd 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/openvpn 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/otrs 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/pdns 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/perdition 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/policyd 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/popa3d 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/postfix 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/postfix-policyd 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/ppp 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/pptpd 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/procmail 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/proftpd 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/puppetd 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/pure-ftpd 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/qpopper 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/rbldnsd 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/rpc_statd 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/rsnapshot 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/rsync 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/sa-exim 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/samba 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/saned 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/saslauthd 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/sasl2-bin 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/schroot 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/scponly 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/slapd 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/smartd 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/smbd_audit 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/smokeping 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/snmpd 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/snort 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/spamd 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/spamc 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/squid 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/ssh 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/stunnel 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/sympa 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/syslogd 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/teapop 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/telnetd 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/tftpd 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/thy 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/ucd-snmp 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/uptimed 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/userv 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/vsftpd 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/watchdog 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/webmin 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/wu-ftpd 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.server/xinetd 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.paranoid/bind 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.paranoid/cron 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.paranoid/incron 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.paranoid/logcheck 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.paranoid/postfix 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.paranoid/ppp 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.paranoid/qpopper 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.paranoid/squid 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.paranoid/ssh 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.paranoid/stunnel 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.paranoid/sysklogd 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.paranoid/telnetd 0640 != 0644
-logcheck-database binary: non-standard-file-perm etc/logcheck/ignore.d.paranoid/tripwire 0640 != 0644
 logcheck-database binary: non-standard-dir-perm etc/logcheck/ 0700 != 0755
 logcheck-database binary: non-standard-dir-perm etc/logcheck/cracking.d/ 0700 != 0755
 logcheck-database binary: non-standard-dir-perm etc/logcheck/violations.d/ 0700 != 0755
